[package]
name = "dragonguard"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
tokio = { version = "1.47.1", features = ["full", "test-util"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
argon2 = "0.5.3"
rand = "0.8"
hmac = "0.12.1"
sha2 = "0.10.9"
aes-gcm = "0.10.3"
arboard = "3.6.0"
dirs = "6.0.0"
rpassword = "7.4.0"
zeroize = { version = "1.8.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.26.0"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
bip39 = "2.2.0"
sha1 = "0.10.6"
digest = "0.10.7"
